# semantic-split

./: pyproject.toml
semantic_split/splitters/: SpacySentenceSplitter.py
